Fixed alignment for about page and contact page

--- a/styling/Contact.css
+++ b/styling/Contact.css
@@ -101,7 +101,6 @@ h3.mapDesc {
 
 #map {
   align-content: center;
-  margin-left: 380px;
   margin-top: 100px;
   border-radius: 10px 0px 0px 10px;
 }
